HelloUltraviolet/Fixtures/RejectedSource/Keys/KeyPathsDiagnostic/Source/Main.uv
//! Rejected key-system specimen for key path marker diagnostics.

public procedure keyPathsDiagnosticReference() -> i32 {
    var shared_value: shared i32 = 1
    %read shared_value.#field {
    }
    return 0
}
